# wiki-llm-android

./: .gitignore  CLAUDE.md  PROJECT.md  README.md  build.gradle.kts  settings.gradle.kts
.claude/: settings.json
.github/workflows/: build.yml
app/: build.gradle.kts  debug.keystore  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llm_jni.cpp
app/src/main/java/com/wikillm/android/: MainActivity.kt  WikiLLMApplication.kt
app/src/main/java/com/wikillm/android/data/: ChatHistoryStore.kt  HfApi.kt  HfModels.kt  KiwixApi.kt  LlmRepository.kt  ModelDownloader.kt  ModelRepository.kt  ZimFile.kt  ZimRepository.kt
app/src/main/java/com/wikillm/android/diag/: DiagLog.kt  DiagScreen.kt
app/src/main/java/com/wikillm/android/diag/github/: GitHubIssueReporter.kt  GitHubReporterViewModel.kt
app/src/main/java/com/wikillm/android/diag/upload/: PasteUploaderViewModel.kt
app/src/main/java/com/wikillm/android/llm/: LlamaContext.kt
app/src/main/java/com/wikillm/android/rag/: InfoboxExtractor.kt  InfoboxGraphWalker.kt  ListExtractor.kt  QueryExtractor.kt  RagPromptBuilder.kt  WikiSearchScreen.kt  WikiSearchViewModel.kt  ZimSearchHolder.kt  ZimSearcher.kt
app/src/main/java/com/wikillm/android/settings/: GenerationSettings.kt  SettingsRepository.kt  SettingsScreen.kt
app/src/main/java/com/wikillm/android/ui/: MarkdownText.kt
app/src/main/java/com/wikillm/android/ui/screens/: ChatScreen.kt  ChatViewModel.kt  HomeScreen.kt  ModelsScreen.kt  ModelsViewModel.kt  WikiScreen.kt  WikiViewModel.kt
app/src/main/java/com/wikillm/android/ui/theme/: Theme.kt  ThemePrefs.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
scripts/: dev-loop.sh
